feat: changed appId to productName (#29)
